chore : tailwind css settings

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Vite + TS</title>
   </head>
   <body>
-    <canvas id="rendererCanvas"></canvas>
+    <canvas id="rendererCanvas" class=""></canvas>
+    <h1 class="text-3xl fixed top-0 left-0 z-[9999999] bg-red-400">Hi</h1>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
