--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
   </head>
   <body>
     <canvas id="rendererCanvas" class=""></canvas>
-    <h1 class="text-3xl fixed top-0 left-0 z-[9999999] bg-red-400">Hi</h1>
+
+    <div
+      class="fixed bottom-10 left-1/2 translate-x-[-50%] text-center bg-black/40 text-white/70 px-5 py-3 rounded-lg border border-white/20 backdrop-blur-sm"
+    >
+      <p>Press 1, 2, 3, 4 to switch between light types</p>
+      <span>Current Light :</span>
+      <span class="text-[#00b7ff]" id="currentLight">Directional</span>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
