feat : spatial 3D sound

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <body>
     <canvas id="rendererCanvas" class=""></canvas>
 
-    <div
+    <!-- <div
       class="fixed bottom-10 left-1/2 translate-x-[-50%] text-center bg-black/40 text-white/70 px-5 py-3 rounded-lg border border-white/20 backdrop-blur-sm"
     >
       <p>Press 1, 2, 3, 4 to switch between light types</p>
       <span>Current Light :</span>
       <span class="text-[#00b7ff]" id="currentLight">Directional</span>
-    </div>
+    </div> -->
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
